implement SetupController and SetupControllerImpl